--- a/Dokumentation/slammer16.tex
+++ b/Dokumentation/slammer16.tex
@@ -288,7 +288,16 @@ Nach wenigen Schritten kann eine relative gute Positionsbestimmung trotz verraus
 Es gibt verschiedene Möglichkeiten einen Roboter mittels Sensoren zu versehen. Unter anderem gibt es 2D-Laser, 3D-Laser oder auch stereo Kameras. Wir haben uns im Rahmen des Projektes nur mit 2D-Laser Daten auseinander gesetzt und stellen hier die gängigsten Datenformate vor. Für die Algorithmen haben wir ein eigenes Datenformat, abgeleitet von den bestehenden, benutzt. 
 
 \section{Eigenes Datenformat}
-Während unseren Experimenten haben wir uns auf ein eigenes Datenformat geeinigt. Jede Zeile stellt einen Scandurchlauf dar. Die erste Zahl gibt die Anzahl der darauf folgenden Messwerte wieder. Nach den Messwerten folgt die Odometrie mit 3 Werten: 
+Während unseren Experimenten haben wir festgestellt, dass viele Beispieldaten eine eigne Logik der Daten besitzen. Deshalb haben wir uns auf ein eigenes Datenformat geeinigt. Jede Zeile stellt einen Scandurchlauf dar. Die ersten drei Werte beschreiben die Odometrie: x-Wert, y-Wert und den Winkel Theta. Die vierte Zahl gibt die Anzahl der darauf folgenden Messwerte wieder. Eine Kommentarzeile wird durch eine \# eingeleitet. Abbildung \ref{eigenesDatenformat} zeigt einen Auszug einer Zeile aus einer Beispieldatei.
+
+\begin{figure}[h]
+	\begin{lstlisting}[backgroundcolor={\color{lightgray}},basicstyle={\normalsize\sffamily},breaklines=true,frame={leftline,bottomline,rightline,topline},language=C,numbers=left,showstringspaces=false,xleftmargin=15pt]
+	#(Odemetry) x y theta (Laser) #num [values]
+	-2.424026 4.800517 2.590948 181 0.642000 0.645000 0.645000 0.644000 0.644000 0.643000 0.642000 0.649000 0.648000 0.646000 0.645000 0.652000 0.651000 0.660000 0.659000 0.659000 0.667000 0.668000 0.667000 0.674000 0.675000 0.675000 0.683000 0.691000 0.692000 0.702000 0.702000 0.710000 0.710000 0.718000 0.726000 0.735000 0.743000 0.743000 0.760000 0.760000 0.771000 0.780000 0.797000 0.797000 0.815000 0.824000 0.833000 0.841000 0.858000 0.872000 0.880000 0.910000 0.917000 0.933000 0.950000 0.967000 0.992000 1.018000 1.024000 1.052000 1.077000 1.104000 1.130000 1.156000 1.191000 1.226000 1.252000 1.284000 1.336000 1.380000 1.421000 1.467000 1.476000 1.469000 1.455000 1.447000 1.437000 1.430000 1.442000 1.513000 1.600000 1.681000 1.796000 1.922000 2.068000 3.150000 3.134000 3.385000 3.757000 4.210000 4.799000 5.584000 6.775000 7.435000 8.183001 8.183001 8.183001 8.183001 8.183001 8.183001 8.183001 8.183000 8.183000 8.183001 8.183001 6.860000 6.397001 6.403001 6.420000 6.112000 6.090000 5.285000 4.937000 4.947000 4.667000 4.243000 3.900000 3.712000 3.544000 3.392000 3.250000 3.129000 3.007000 2.903000 2.808000 2.712000 2.631000 2.549000 2.472000 2.402000 2.335000 2.276000 2.216000 2.163000 2.110000 2.065000 2.019000 1.973000 1.937000 1.903000 1.859000 1.824000 1.798000 1.764000 1.741000 1.714000 1.688000 1.661000 1.634000 1.618000 1.591000 1.574000 1.550000 1.532000 1.515000 1.499000 1.482000 1.465000 1.448000 1.440000 1.423000 1.415000 1.406000 1.389000 1.381000 1.372000 1.363000 1.347000 1.346000 1.339000 1.330000 1.322000 1.314000 1.305000 1.305000 1.298000 1.298000 1.289000 1.282000 1.282000 1.275000 1.276000 1.278000 1.272000 1.264000 
+	\end{lstlisting} 
+	\protect\caption{Eine Datenzeile im eigenem Datenformat}
+	\label{eigenesDatenformat}
+\end{figure}
 
 \section{Beispieldaten}
 Einige Sensor Beispieldaten können von folgender Webseite heruntergeladen werden:  \url{http://www.mrpt.org/robotics_datasets}
